--- a/src/MZCovidBot.Services/MZCovidBot.Services.csproj
+++ b/src/MZCovidBot.Services/MZCovidBot.Services.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Discord.Net" Version="2.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MZCovidBot.Commands\MZCovidBot.Commands.csproj" />
+  </ItemGroup>
+
 </Project>
