--- a/src/MZCovidBot/MZCovidBot.csproj
+++ b/src/MZCovidBot/MZCovidBot.csproj
@@ -7,6 +7,13 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.4.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MZCovidBot.Commands\MZCovidBot.Commands.csproj" />
+    <ProjectReference Include="..\MZCovidBot.Services\MZCovidBot.Services.csproj" />
+    <ProjectReference Include="..\MZCovidBot.Stats.Api\MZCovidBot.Stats.Api.csproj" />
   </ItemGroup>
 
 </Project>
