--- a/src/MZCovidBot.Stats.Api/MZCovidBot.Stats.Api.csproj
+++ b/src/MZCovidBot.Stats.Api/MZCovidBot.Stats.Api.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Flurl" Version="3.0.2" />
+    <PackageReference Include="Flurl.Http" Version="3.2.0" />
+  </ItemGroup>
+
 </Project>
