--- a/src/MZCovidBot.Services/MZCovidBot.Services.csproj
+++ b/src/MZCovidBot.Services/MZCovidBot.Services.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.3.0" />
     <PackageReference Include="Discord.Net" Version="2.4.0" />
+    <PackageReference Include="Quartz" Version="3.3.3" />
   </ItemGroup>
 
   <ItemGroup>
