--- a/src/MZCovidBot/MZCovidBot.csproj
+++ b/src/MZCovidBot/MZCovidBot.csproj
@@ -6,12 +6,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.3.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
     <PackageReference Include="Discord.Net" Version="2.4.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+    <PackageReference Include="Quartz" Version="3.3.3" />
+    <PackageReference Include="Quartz.Serialization.Json" Version="3.3.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MZCovidBot.Commands\MZCovidBot.Commands.csproj" />
+    <ProjectReference Include="..\MZCovidBot.Database\MZCovidBot.Database.csproj" />
     <ProjectReference Include="..\MZCovidBot.Services\MZCovidBot.Services.csproj" />
     <ProjectReference Include="..\MZCovidBot.Stats.Api\MZCovidBot.Stats.Api.csproj" />
   </ItemGroup>
