--- a/src/MZCovidBot.Database/MZCovidBot.Database.csproj
+++ b/src/MZCovidBot.Database/MZCovidBot.Database.csproj
@@ -5,17 +5,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Autofac" Version="6.3.0" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.11">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
-      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.11">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.11"/>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\MZCovidBot.Stats.Api\MZCovidBot.Stats.Api.csproj" />
+        <ProjectReference Include="..\MZCovidBot.Stats.Api\MZCovidBot.Stats.Api.csproj"/>
     </ItemGroup>
 
 </Project>
