--- a/src/MZCovidBot.Jobs/MZCovidBot.Jobs.csproj
+++ b/src/MZCovidBot.Jobs/MZCovidBot.Jobs.csproj
@@ -5,11 +5,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Quartz" Version="3.3.3" />
+        <PackageReference Include="Discord.Net" Version="2.4.0"/>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0"/>
+        <PackageReference Include="Quartz" Version="3.3.3"/>
+        <PackageReference Include="Quartz.Plugins" Version="3.3.3"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\MZCovidBot.Stats.Api\MZCovidBot.Stats.Api.csproj" />
+        <ProjectReference Include="..\MZCovidBot.Database\MZCovidBot.Database.csproj"/>
+        <ProjectReference Include="..\MZCovidBot.Stats.Api\MZCovidBot.Stats.Api.csproj"/>
     </ItemGroup>
 
 </Project>
