--- a/src/MZCovidBot.Jobs/MZCovidBot.Jobs.csproj
+++ b/src/MZCovidBot.Jobs/MZCovidBot.Jobs.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="10.1.1"/>
         <PackageReference Include="Discord.Net" Version="2.4.0"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0"/>
         <PackageReference Include="Quartz" Version="3.3.3"/>
