--- a/src/MZCovidBot/MZCovidBot.csproj
+++ b/src/MZCovidBot/MZCovidBot.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="10.1.1"/>
         <PackageReference Include="Discord.Net" Version="2.4.0"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2"/>
         <PackageReference Include="Quartz" Version="3.3.3"/>
