--- a/src/MZCovidBot.Jobs/MZCovidBot.Jobs.csproj
+++ b/src/MZCovidBot.Jobs/MZCovidBot.Jobs.csproj
@@ -5,16 +5,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AutoMapper" Version="10.1.1"/>
-        <PackageReference Include="Discord.Net" Version="2.4.0"/>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0"/>
-        <PackageReference Include="Quartz" Version="3.3.3"/>
-        <PackageReference Include="Quartz.Plugins" Version="3.3.3"/>
+        <PackageReference Include="AutoMapper" Version="10.1.1" />
+        <PackageReference Include="Discord.Net" Version="2.4.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+        <PackageReference Include="Quartz" Version="3.3.3" />
+        <PackageReference Include="Quartz.Plugins" Version="3.3.3" />
+        <PackageReference Include="QuickChart" Version="2.2.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\MZCovidBot.Database\MZCovidBot.Database.csproj"/>
-        <ProjectReference Include="..\MZCovidBot.Stats.Api\MZCovidBot.Stats.Api.csproj"/>
+        <ProjectReference Include="..\MZCovidBot.Database\MZCovidBot.Database.csproj" />
+        <ProjectReference Include="..\MZCovidBot.Stats.Api\MZCovidBot.Stats.Api.csproj" />
     </ItemGroup>
 
 </Project>
