--- a/src/MZCovidBot.Jobs/MZCovidBot.Jobs.csproj
+++ b/src/MZCovidBot.Jobs/MZCovidBot.Jobs.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0"/>
         <PackageReference Include="Quartz" Version="3.3.3"/>
         <PackageReference Include="Quartz.Plugins" Version="3.3.3"/>
+        <PackageReference Include="QuickChart" Version="2.2.0"/>
     </ItemGroup>
 
     <ItemGroup>
