--- a/src/MZCovidBot.Services/MZCovidBot.Services.csproj
+++ b/src/MZCovidBot.Services/MZCovidBot.Services.csproj
@@ -5,12 +5,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Discord.Net" Version="2.4.0"/>
-        <PackageReference Include="Quartz" Version="3.3.3"/>
+        <PackageReference Include="Discord.Net" Version="3.0.0-dev-20211205.1" />
+        <PackageReference Include="Quartz" Version="3.3.3" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\MZCovidBot.Commands\MZCovidBot.Commands.csproj"/>
+        <ProjectReference Include="..\MZCovidBot.Commands\MZCovidBot.Commands.csproj" />
     </ItemGroup>
 
 </Project>
