--- a/src/MZCovidBot/MZCovidBot.csproj
+++ b/src/MZCovidBot/MZCovidBot.csproj
@@ -6,19 +6,19 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AutoMapper" Version="10.1.1"/>
-        <PackageReference Include="Discord.Net" Version="2.4.0"/>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2"/>
-        <PackageReference Include="Quartz" Version="3.3.3"/>
-        <PackageReference Include="Quartz.Serialization.Json" Version="3.3.3"/>
+        <PackageReference Include="AutoMapper" Version="10.1.1" />
+        <PackageReference Include="Discord.Net" Version="3.0.0-dev-20211205.1" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+        <PackageReference Include="Quartz" Version="3.3.3" />
+        <PackageReference Include="Quartz.Serialization.Json" Version="3.3.3" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\MZCovidBot.Commands\MZCovidBot.Commands.csproj"/>
-        <ProjectReference Include="..\MZCovidBot.Database\MZCovidBot.Database.csproj"/>
-        <ProjectReference Include="..\MZCovidBot.Jobs\MZCovidBot.Jobs.csproj"/>
-        <ProjectReference Include="..\MZCovidBot.Services\MZCovidBot.Services.csproj"/>
-        <ProjectReference Include="..\MZCovidBot.Stats.Api\MZCovidBot.Stats.Api.csproj"/>
+        <ProjectReference Include="..\MZCovidBot.Commands\MZCovidBot.Commands.csproj" />
+        <ProjectReference Include="..\MZCovidBot.Database\MZCovidBot.Database.csproj" />
+        <ProjectReference Include="..\MZCovidBot.Jobs\MZCovidBot.Jobs.csproj" />
+        <ProjectReference Include="..\MZCovidBot.Services\MZCovidBot.Services.csproj" />
+        <ProjectReference Include="..\MZCovidBot.Stats.Api\MZCovidBot.Stats.Api.csproj" />
     </ItemGroup>
 
 </Project>
