--- a/src/MZCovidBot/MZCovidBot.csproj
+++ b/src/MZCovidBot/MZCovidBot.csproj
@@ -7,7 +7,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="10.1.1" />
-        <PackageReference Include="Discord.Net" Version="3.0.0-dev-20211205.1" />
+        <PackageReference Include="Discord.Net" Version="3.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
         <PackageReference Include="Quartz" Version="3.3.3" />
         <PackageReference Include="Quartz.Serialization.Json" Version="3.3.3" />
