Upgrade project dependencies

--- a/src/MZCovidBot.Commands/MZCovidBot.Commands.csproj
+++ b/src/MZCovidBot.Commands/MZCovidBot.Commands.csproj
@@ -5,7 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Discord.Net" Version="3.0.0" />
+        <PackageReference Include="Discord.Net" Version="3.1.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
 
 </Project>
