--- a/src/MZCovidBot.Jobs/MZCovidBot.Jobs.csproj
+++ b/src/MZCovidBot.Jobs/MZCovidBot.Jobs.csproj
@@ -6,8 +6,9 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="10.1.1" />
-        <PackageReference Include="Discord.Net" Version="3.0.0" />
+        <PackageReference Include="Discord.Net" Version="3.1.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="Quartz" Version="3.3.3" />
         <PackageReference Include="Quartz.Plugins" Version="3.3.3" />
         <PackageReference Include="QuickChart" Version="2.2.0" />
